bugfixes styles on mobile devices

--- a/style-guide/source/css/components/_button.scss
+++ b/style-guide/source/css/components/_button.scss
@@ -100,3 +100,11 @@
     margin-right: 0;
   }
 }
+
+// Media Querie
+// ----------------------
+@media (max-width: $break-default){
+  .btn, button, input[type="submit"], input[type="reset"]{
+    margin-top: 0;
+  }
+}
