--- a/style-guide/source/css/components/_card.scss
+++ b/style-guide/source/css/components/_card.scss
@@ -7,6 +7,10 @@
   & *:last-child{
     margin-bottom: 0;
   }
+  & .btn, button, input[type="submit"], input[type="reset"]{
+    margin-top: $line-height;
+    margin-bottom: 0;
+  }
 }
 
 // Card Elements
