--- a/style-guide/source/css/components/_menu.scss
+++ b/style-guide/source/css/components/_menu.scss
@@ -37,10 +37,10 @@
     right: 0;
     left: 0;
     bottom: 0;
-    padding-top: $unit-8 * 2;
+    padding-top: $line-height * 4;
     text-align: center;
     font-size: $unit-4 + $unit;
     z-index: 9;
-    height: 100%;
+    height: calc(100% - 108px);
   }
 }
